# LNLibEx

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/LNData/: CMakeLists.txt
src/LNData/private/: LNConverter.cpp  LNConverter.h  LNData.cpp  LNIGESGenerator.cpp  LNIGESGenerator.h  LNSTEPGenerator.cpp  LNSTEPGenerator.h
src/LNData/public/: LNData.h  LNDataDefinitions.h
src/LNMesh/: CMakeLists.txt
src/LNMesh/private/: LNMesh.cpp
src/LNMesh/public/: LNMesh.h  LNMeshDefinitions.h
tests/: CMakeLists.txt  T_Data.cpp  T_Mesh.cpp  T_Utils.cpp  T_Utils.h
